# serializer version: 1
# name: test_spike_encoder_delta_high_threshold_snapshot
  dict({
    'method': 'delta',
    'spike_counts': list([
      0,
      0,
    ]),
    'spike_trains': list([
      list([
      ]),
      list([
      ]),
    ]),
  })
# ---
# name: test_spike_encoder_delta_one_channel_snapshot
  dict({
    'method': 'delta',
    'spike_counts': list([
      52,
    ]),
    'spike_trains': list([
      list([
        0.004,
        0.008,
        0.016,
        0.02,
        0.028,
        0.032,
        0.04,
        0.052,
        0.056,
        0.064,
        0.068,
        0.08,
        0.088,
        0.092,
        0.096,
        0.104,
        0.108,
        0.12,
        0.128,
        0.132,
        0.136,
        0.144,
        0.148,
        0.152,
        0.156,
        0.16,
        0.168,
        0.176,
        0.18,
        0.184,
        0.188,
        0.192,
        0.196,
        0.2,
        0.212,
        0.216,
        0.22,
        0.224,
        0.228,
        0.232,
        0.24,
        0.252,
        0.256,
        0.26,
        0.268,
        0.276,
        0.28,
        0.292,
        0.296,
        0.304,
        0.308,
        0.316,
      ]),
    ]),
  })
# ---
# name: test_spike_encoder_delta_two_channel_snapshot
  dict({
    'method': 'delta',
    'spike_counts': list([
      31,
      30,
    ]),
    'spike_trains': list([
      list([
        0.004,
        0.008,
        0.016,
        0.024,
        0.036,
        0.044,
        0.048,
        0.06,
        0.064,
        0.068,
        0.08,
        0.088,
        0.1,
        0.108,
        0.112,
        0.124,
        0.128,
        0.132,
        0.136,
        0.14,
        0.148,
        0.156,
        0.16,
        0.164,
        0.168,
        0.176,
        0.18,
        0.184,
        0.188,
        0.192,
        0.196,
      ]),
      list([
        0.004,
        0.008,
        0.012,
        0.016,
        0.02,
        0.024,
        0.028,
        0.032,
        0.04,
        0.048,
        0.056,
        0.068,
        0.076,
        0.08,
        0.084,
        0.096,
        0.108,
        0.116,
        0.132,
        0.136,
        0.14,
        0.148,
        0.152,
        0.156,
        0.16,
        0.168,
        0.176,
        0.184,
        0.188,
        0.196,
      ]),
    ]),
  })
# ---
# name: test_spike_encoder_rate_seeded_snapshot
  dict({
    'method': 'rate',
    'spike_counts': list([
      17,
      24,
    ]),
    'spike_trains': list([
      list([
        0.016,
        0.032,
        0.04,
        0.048,
        0.056,
        0.064,
        0.068,
        0.1,
        0.108,
        0.112,
        0.132,
        0.14,
        0.148,
        0.152,
        0.16,
        0.188,
        0.196,
      ]),
      list([
        0.0,
        0.004,
        0.028,
        0.032,
        0.068,
        0.08,
        0.084,
        0.092,
        0.096,
        0.1,
        0.108,
        0.112,
        0.132,
        0.136,
        0.14,
        0.148,
        0.156,
        0.16,
        0.164,
        0.172,
        0.176,
        0.18,
        0.188,
        0.192,
      ]),
    ]),
  })
# ---
# name: test_spike_encoder_temporal_two_channel_snapshot
  dict({
    'method': 'temporal',
    'spike_counts': list([
      26,
      28,
    ]),
    'spike_trains': list([
      list([
        0.004,
        0.008,
        0.012,
        0.02,
        0.024,
        0.028,
        0.032,
        0.04,
        0.048,
        0.056,
        0.064,
        0.068,
        0.076,
        0.08,
        0.084,
        0.104,
        0.12,
        0.124,
        0.128,
        0.132,
        0.136,
        0.148,
        0.164,
        0.168,
        0.176,
        0.192,
      ]),
      list([
        0.008,
        0.012,
        0.016,
        0.02,
        0.024,
        0.028,
        0.032,
        0.04,
        0.048,
        0.056,
        0.064,
        0.068,
        0.076,
        0.092,
        0.096,
        0.108,
        0.116,
        0.124,
        0.128,
        0.132,
        0.144,
        0.152,
        0.16,
        0.164,
        0.168,
        0.18,
        0.184,
        0.188,
      ]),
    ]),
  })
# ---
